<resources>
    <string name="app_name">DailyPlate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">button</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="healthyfood">healthyfood</string>
    <string name="elips">elips</string>
    <string name="hello_world">Hello World</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="daftar_fragment">Daftar Fragment</string>
    <string name="sign_up_fragment">Sign Up Fragment</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="dailyplate">DailyPlate</string>
    <string name="lupa_sandi">Lupa sandi</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="greeting_daftar">Silahkan isi untuk membuat akun</string>
    <string name="greeting_login">Silahkan masuk menggunakan akun anda</string>
    <string name="nama">Nama Lengkap</string>
    <string name="nomor_telepon">Nomor telepon</string>
    <string name="sandi">Sandi</string>
    <string name="konf_sandi">Konfirmasi Sandi</string>
    <string name="login_alt">Sudah punya akun?</string>
    <string name="login2"><u>Masuk</u></string>
    <string name="forgot_pass"><u>Lupa sandi?</u></string>
    <string name="trivia1">Ingin memakan makanan yang sehat?</string>
    <string name="trivia_desc1">Apakah anda merasa makan yang anda konsumsi tidak sehat, dan anda bingung harus masak makanan sehat apa?</string>
    <string name="trivia2">Ingin tahu resep makanan-makanan sehat?</string>
    <string name="trivia_desc2">Anda ingin mencoba perilaku baru dengan memasak makanan sendiri tetapi bingung apa resepnya?</string>
    <string name="trivia3">Mulai dengan DailyPlate</string>
    <string name="trivia_desc3">Anda ingin mencoba perilaku baru dengan memasak makanan sendiri tetapi bingung apa resepnya?</string>
    <string name="greeting_forgot">Masukkan email yang anda gunakan</string>
    <string name="email_request">Kirim</string>
    <string name="error_empty_name">Please enter your name.</string>
    <string name="error_empty_email">Please enter your email address.</string>
    <string name="error_empty_phone">Please enter your phone number.</string>
    <string name="error_empty_password">Please enter your password.</string>
    <string name="error_password_mismatch">Passwords do not match.</string>
    <string name="signup_success">Daftar berhasil</string>
    <string name="popup_text">Periksa email anda untuk konfirmasi</string>
    <string name="konf_forgotpass">Oke</string>
    <string name="popup_pict">popup_pict</string>
    <string name="title_activity_dots_indicator_sample_compose_fragment">
    </string>
    <string name="profile">Profile</string>
    <string name="resep">Resep</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="daftar_alt">Belum punya akun?</string>
    <string name="daftaralt"><u>Daftar</u></string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="fast_login">Atau masuk dengan</string>
    <string name="default_web_client_id">894168586973-79d8unudh4nl5bs0j6hfnpb3qebfaj0t.apps.googleusercontent.com</string>
    <string name="facebook_app_id">954383739571726</string>
    <string name="kentang">Kentang</string>
    <string name="menurunkan_tekanan_darah">Menurunkan tekanan darah</string>
    <string name="menurunkan_kolesterol">Menurunkan kolesterol</string>
    <string name="buncis">Buncis</string>
    <string name="mangga">Mangga</string>
    <string name="memperkuat_imun">Memperkuat imun</string>
    <string name="ingin_tahu_kesehatanmu_lebih_lanjut">Ingin Tahu Kesehatanmu Lebih Lanjut?</string>
    <string name="cek_foodiefolio">Cek FoodieFolio</string>
    <string name="selamat_datang_di_dailyplate">Selamat Datang di DailyPlate!</string>
    <string name="home_desc">Mari jelajahi resep, tips, dan panduan gizi untuk mencapai kesehatan optimal!</string>
    <string name="title_1">Apa Keluhanmu?</string>
    <string name="title_2">Bahan yang sehat</string>
    <string name="title_3">Bahan yang Kurang Sehat</string>
    <string name="title_resep">Yuk, Buat Resep Kamu Sendiri!</string>
    <string name="herbs_chicken">Herbs Chicken</string>
    <string name="_78_kkal">78 kkal</string>
    <string name="smoothie_bowl">Smoothie Bowl</string>
    <string name="salad_sesame_dressing">Salad Sesame Dressing</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="title_4">Menu Sehat Terpopuler</string>
    <string name="kolesterol">Kolesterol</string>
    <string name="pra_operasi">Pra Operasi</string>
    <string name="diabetes">Diabetes</string>
    <string name="menu_keluhan">menu keluhan</string>
    <string name="hipertensi">Hipertensi</string>
    <string name="soda">Soda</string>
    <string name="krimer">Krimer</string>
    <string name="daging_olahan">Daging Olahan</string>
    <string name="meningkatkan_laju_kanker_dan_tumor_jinak">Meningkatkan laju kanker dan tumor jinak</string>
    <string name="meningkatkan_risiko_penyakit_jantung">Meningkatkan risiko penyakit jantung</string>
    <string name="menaikkan_kadar_kolesterol">Menaikkan kadar kolesterol</string>
    <string name="ayam">Ayam</string>
    <string name="tinggi_protein">Tinggi protein</string>
    <string name="telur_ayam">Telur Ayam</string>
    <string name="salmon">Salmon</string>
    <string name="menjaga_kesehatan_otak">Menjaga kesehatan otak</string>
    <string name="bahan_yang_kurang_sehat">Bahan yang Kurang Sehat</string>
    <string name="saus_instan">Saus Instan</string>
    <string name="jeroan">Jeroan</string>
    <string name="minuman_kemasan">Minuman Kemasan</string>
    <string name="meningkatkan_kadar_gula_darah">Meningkatkan kadar gula darah</string>
    <string name="meningkatkan_risiko_diabetes">Meningkatkan risiko diabetes</string>
    <string name="profil_title">Profil</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="informasi_akun">Informasi Akun</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="ganti_sandi">Ganti Sandi</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="bahasa">Bahasa</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="keluar">Keluar</string>
    <string name="unggah_resep">Unggah Resep</string>
    <string name="unggah_foto_menu">Unggah Foto Menu</string>
    <string name="langkah_1">Langkah 1</string>
    <string name="informasi_menu">Informasi Menu</string>
    <string name="nama_menu">Nama Menu</string>
    <string name="penyakit">Penyakit</string>
    <string name="kandungan_kalori">Kandungan Kalori</string>
    <string name="jenis_menu">Jenis Menu</string>
    <string name="cocok_untuk_penyakit">Cocok untuk Penyakit</string>
    <string name="resep_makanan">Resep Makanan</string>
    <string name="resep_saya">Resep Saya</string>
    <string name="belum_ada_resep_yang_diunggah">Belum Ada Resep yang Diunggah</string>
    <string name="yuk_buat_kumpulan_resepmu_sendiri">Yuk buat kumpulan resepmu sendiri!</string>
    <string name="tambah">tambah</string>
    <string name="langkah_2">Langkah 2</string>
    <string name="alat">Alat</string>
    <string name="bahan">Bahan</string>
    <string name="bahan_bahan">Bahan-bahan</string>
    <string name="bahan_">+ Bahan</string>
    <string name="langkah">Langkah</string>
    <string name="langkah_langkah">Langkah-langkah</string>
    <string name="langkah_">+ Langkah</string>
    <string name="unggah">Unggah</string>
    <string name="makanan">Makanan</string>
    <string name="step_memasak">Step Memasak</string>
    <string name="hasil_pencarian">Hasil Pencarian</string>
    <string name="riwayat">Riwayat</string>
    <string name="apakah_anda_yakin_ingin_keluar">Apakah anda yakin ingin keluar?</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Iya</string>
    <string name="resep_anda_berhasil_diunggah">Resep anda berhasil diunggah!</string>
    <string name="seputar_penyakit">Seputar Penyakit</string>
    <string name="ciri_ciri_penyakit">Ciri-ciri penyakit</string>
    <string name="tips_pencegahan">Tips Pencegahan</string>
    <string name="sandi_lama">Sandi Lama</string>
    <string name="sandi_baru">Sandi Baru</string>
    <string name="ketik_ulang_sandi_baru">Ketik Ulang Sandi Baru</string>
    <string name="simpan">Simpan</string>
    <string name="kata_sandi_berhasil_diubah">Kata sandi berhasil diubah</string>
    <string name="makanan_rendah_kalori">Makanan Rendah Kalori</string>
    <string name="camilan_rendah_kalori">Camilan Rendah Kalori</string>
    <string name="minuman">Minuman</string>
    <string name="tinggi_protein1">Tinggi Protein</string>
    <string name="rendah_lemak">Rendah Lemak</string>
    <string name="upgrade_to_pro">Upgrade to Pro</string>
    <string name="ingin_tahu_berita_kesehatan_terkini">Ingin Tahu Berita Kesehatan Terkini?</string>
    <string name="artikel_hari_ini">Artikel Hari Ini</string>
    <string name="sorry_under_development">Sorry, under development :(</string>

</resources>