<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TabResepFragment1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/makanan_rendah_kalori"
            android:fontFamily="@font/sf_bold"
            android:textSize="19sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/green_20"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_mymenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/camilan_rendah_kalori"
            android:fontFamily="@font/sf_bold"
            android:textSize="19sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/green_20"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_mymenu2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/minuman"
            android:fontFamily="@font/sf_bold"
            android:textSize="19sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/green_20"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_mymenu3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tinggi_protein1"
            android:fontFamily="@font/sf_bold"
            android:textSize="19sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:textColor="@color/green_20"/>

        <Button
            android:id="@+id/btn_upgrade1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_white_background"
            android:text="@string/upgrade_to_pro"
            android:textColor="@color/green"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rendah_lemak"
            android:fontFamily="@font/sf_bold"
            android:textSize="19sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:textColor="@color/green_20"/>

        <Button
            android:id="@+id/btn_upgrade2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="120dp"
            android:background="@drawable/button_white_background"
            android:text="@string/upgrade_to_pro"
            android:textColor="@color/green"/>

    </LinearLayout>


</ScrollView>